--- a/detailtable.html
+++ b/detailtable.html
@@ -14,13 +14,12 @@
     <div class="container-fluid px-2.5">
         <div class="w3-container w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class='fa fa-user w3-margin-right w3-text-blue' style='font-size:36px'></i>{{prof.name.title()}}</h2>
-              <div class="w3-container">
-                <h5 class="w3-opacity"><b>Department: {{prof.department}}</b></h5>
-                <h6 class="w3-text-blue"></i>Past Courses: {{reviews[0].courses}}</h6> <!-- leaving this for now but gonna need all the courses they've taught from the registrar-->
-                <hr>
-              </div>
-              <p></p>
-          
+            <h5 class="w3-opacity"><b>Department: {{prof.department}}</b></h5>
+            <h5 class="w3-opacity"><b>{{prof.numratings}} Reviews</b></h5>
+            <h6 class="w3-text-blue"></i>Past Courses: {{reviews[0].courses}}</h6> <!-- leaving this for now but gonna need all the courses they've taught from the registrar-->
+            <br>
+          </div>
+          <div class="w3-container w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-comments fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Student Feedback:</h2>
             {%for review in reviews%}
               <div class="w3-container">
