--- a/index.html
+++ b/index.html
@@ -1,141 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <script>
-    // Add this JavaScript function to automatically reload the page
-    function reloadPage() {
-      location.reload();
-    }
-  </script>
-  <link rel="icon" href="https://www.cs.princeton.edu/favicon">
-</head>
-<title>Princeton Professors</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #61afe2;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav b {
-  float: right;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav b:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav .hover:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-.profName:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.left-column,
-.right-column {
-    overflow-y: auto;
-    height: 100vh;
-    box-sizing: border-box;
-    padding: 20px;
-}
-
-.dropdown {
-  float: right;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  /* padding: 14px 16px; */
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  /* padding: 12px 16px; */
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-</style>
-</head>
-<body class="w3-light-grey">
-
-<!-- Page Container -->
-
-<div class="topnav">
-  <a href="#home">Princeton Professors</a>
-  <a class= "hover" href="/review_form">Review a Professor</a>
-  <div class="dropdown">
-    <b class="dropbtn">{{username}}
-      <!-- <i class="fa fa-caret-down"></i> -->
-    </b>
-    <div class="dropdown-content">
-      <a href="/logoutcas" onclick="logout()" id = "logoutB">Logout</a>
-    </div>
-  </div>
-  <!-- <b onclick="logoutDisplay()" class="hover">{{username}}</b> 
-  <a href="/logoutcas" onclick="logout()" id = "logoutB">Logout</a> -->
-
-</div>
+{% set username = "test" %}
+{% include 'header.html' %}
 
   <!-- The Grid -->
   <div class="w3-row-padding">
