eden + yoni: standardized header and footer, worked a bit on frontend

--- a/header.html
+++ b/header.html
@@ -23,8 +23,7 @@
 <!-- Page Container -->
 
 <div class="topnav">
-  <a href="#home">Princeton Professors</a>
-  <a class= "hover" href="/review_form">Review a Professor</a>
+  <a href="/">Princeton Professors</a>
   <div class="dropdown">
     <b class="dropbtn">{{username}}
       <!-- <i class="fa fa-caret-down"></i> -->
@@ -33,5 +32,6 @@
       <a href="/logoutcas" onclick="logout()" id = "logoutB">Logout</a>
     </div>
   </div>
+  <a class= "hover" href="/review_form">Review a Professor</a>
 </div>
 
