--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<hr>
-<a href="logoutapp">Log out of the app</a></br>
-<a href="logoutcas">Log out of the app and end the CAS session</a></br>
-<hr>
+<footer class="w3-container w3-center w3-margin-top">
+    <p>Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla Waitman</p>
+    <a target="childWindow" href="/adminpage">Admin controls</a>
+</footer>
