--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-{% set username = "test" %}
+{% set username = username %}
 {% include 'header.html' %}
 
   <!-- The Grid -->
@@ -56,10 +56,7 @@
   <!-- End Page Container -->
 </div>
 
-<footer class="w3-container w3-blue w3-center w3-margin-top">
-  <p>Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla Waitman</p>
-  <a target="childWindow" href="/adminpage">Admin controls</a>
-</footer>
+{% include 'footer.html' %}
 
 <!-- JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
