--- a/review.html
+++ b/review.html
@@ -1,106 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Princeton Professors</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% set username = username %}
+{% include 'header.html' %}
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-<style>
-label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: bold;
-}
-
-input[type="number"] {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-}
-
-textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-    resize: vertical; /* Allow vertical resizing */
-}
-
-button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #45a049;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #61afe2;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav b {
-  float: right;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav b:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-/* Style for the Select2 dropdown
-.select2-container--default .select2-selection--single {
-            border: 1px solid #ccc;
-            border-radius: 4px;
-} */
-
-</style>
-
-</head>
-<body class="w3-light-grey">
 
 <!-- Page Container -->
-
-<div class="topnav">
-  <a href="/index">Go back</a>
-  <b class="hover">{{username}}</b>
-</div>
 
   <!-- The Grid -->
   <div class="w3-row-padding">
@@ -158,9 +62,7 @@ body {
   <!-- End Page Container -->
 </div>
 
-<footer class="w3-container w3-blue w3-center w3-margin-top">
-  <p>Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla Waitman</p>
-</footer>
+{% include 'footer.html' %}
 
 <script>
   // Activate Select2 on the professor's name select element
