--- a/adminpage.html
+++ b/adminpage.html
@@ -28,7 +28,7 @@
         <div class="search col-sm-3">
           <input
             type="text"
-            id="adminsearchInput"
+            id="adminSearchInput"
             placeholder="Search for a professor..."
             autofocus
           />
@@ -39,19 +39,7 @@
     {% if not is_admin: %} 
         You cannot access this page. 
     {% else %}
-        <table class="table table-striped">
-        {% for prof in profs %}
-        <tr>
-            <td>
-            <a
-                target="childWindow"
-                href="/adminpagetable?profname={{prof.name}}&profdept={{prof.department}}"
-                >{{prof.name}} ({{prof.department}})</a
-            >
-            </td>
-        </tr>
-        {% endfor %}
-        </table>
+      <div id="searchResults"></div>
     {% endif %}
 
     <div class="container-fluid footer">
@@ -63,7 +51,56 @@
       </center>
     </div>
 
+    <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script>
+      "use strict";
+
+      function handleResponse(data) {
+        $("#searchResults").html(data);
+      }
+
+      function handleError() {
+        alert("Error: Failed to fetch data from server");
+      }
+
+      let request = null;
+
+      function getResults() {
+        let adminSearch = $("#adminSearchInput").val();
+        let encodedAdminSearch = encodeURIComponent(adminSearch);
+
+        let url =
+          "/adminSearchResults?prof=" +
+          encodedAdminSearch;
+
+        if (request !== null) request.abort();
+
+        let requestData = {
+          type: "GET",
+          url: url,
+          success: handleResponse,
+          error: handleError,
+        };
+        $.ajax(requestData);
+      }
+
+      let timer = null;
+
+      function debouncedGetResults() {
+        clearTimeout(timer);
+        timer = setTimeout(getResults, 500);
+      }
+
+      function setup() {
+        $("#adminSearchInput").on("input", debouncedGetResults);
+
+        getResults();
+      }
+
+      $("document").ready(setup);
+    </script>
 
   </body>
 </html>
