jacob working on secret key

--- a/adminpage.html
+++ b/adminpage.html
@@ -29,7 +29,7 @@
           <input
             type="text"
             id="adminSearchInput"
-            placeholder="Search for a professor..."
+            placeholder="Search for name..."
             autofocus
           />
         </div>
