yoni+eden: fixed thanks page and fixed username bug

--- a/thanks.html
+++ b/thanks.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
+{% set username = username %}
+{% include 'header.html' %}
+
+<html>
   <head>
   </head>
   <body>
-    <h1>Thank You for Your Review</h1>
-    <a href="/index">Go back to the homepage.</a>
+    <br>
+      <h2 style="text-align: center;">Thank You for Your Review!</h2>
+    <br>
   </body>
 </html>
+
+{% include 'footer.html' %}
