--- a/adminpage.html
+++ b/adminpage.html
@@ -2,7 +2,8 @@
 
 <html>
   <head>
-    <title>Admin Controls</title>
+    <title>Princeton Professors Admin</title>
+    <link rel="icon" href="https://www.cs.princeton.edu/favicon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
