--- a/header.html
+++ b/header.html
@@ -26,6 +26,7 @@
 <!-- Page Container -->
 
 <div class="topnav">
+  <img src="https://www.cs.princeton.edu/favicon"></img>
   <a href="/">Princeton Professors</a>
   <div class="dropdown">
     <b class="dropbtn">{{username}}
