Yoni, Jacob, Eden: added username and datetime to review table and updated sorting practices

--- a/detailtable.html
+++ b/detailtable.html
@@ -28,6 +28,8 @@
                 <p>Content: {{review.content}} / 5.0 | Delivery {{review.delivery}} / 5.0 | Availability {{review.availability}} / 5.0 | Organization {{review.organization}} / 5.0</p>
                 <p>Comments: {{review.comment}}</p>
                 <p>Courses taken with {{prof.name.title()}}: {{review.courses}}</p>
+                <p>{{review.username}}</p>
+                <p>{{review.datetime}}</p>
                 <hr>
               </div>
             {% endfor %}
