--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div display="flex" align-items="center" class="w3-container" style="height: 100vh;">
         <center>
-          <h2 class="w3-text-grey w3-padding-16">Search to begin...</h2>
+          <h2 class="w3-text-grey w3-padding-16">Click on a professors to begin...</h2>
         </center>
       </div>
     
