--- a/thanks.html
+++ b/thanks.html
@@ -9,6 +9,7 @@
   <body>
     <br>
       <h2 style="text-align: center;">Thank You for Your Review!</h2>
+      <center><a href="/"><button style="background-color: darkorange;">Go Home</button></a></center>
     <br>
   </body>
 </html>
