add discard button but doesn't work yet

--- a/review.html
+++ b/review.html
@@ -52,6 +52,7 @@
                     <span style="color: red;">*</span> = required
                     <br>
                     <br>
+                    <a href="/index"><button style="background-color: red; color: white;">Discard</button></a>
                     <button type="submit">Submit Review</button>
                     <p></p>
                 </form>
