added a little professor icon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
 
       <div display="flex" align-items="center" class="w3-container" style="height: 100vh;">
         <center>
-          <h2 class="w3-text-grey w3-padding-16">Click on a professor to begin...</h2>
+          <br>
+          <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+          <br>
+          <br>
+          <i class='fa fa-id-card' style='font-size:96px; color: gray;'></i>
+          <h2 class="w3-text-grey w3-padding-16">Select a professor...</h2>
         </center>
       </div>
     
