putting a picture on the landing page

--- a/landing.html
+++ b/landing.html
@@ -26,3 +26,7 @@
 <br>
 <a href="/index"><button style="background-color: orange;">Log in with Princeton NetId</button></a>
 </center>
+<br>
+<center>
+    <img src="https://www.cs.princeton.edu/sites/default/files/uploads/all_lecturers.jpg" style="width: 100vh;">
+</center>
