Jacob and Kayla: finishing page linking for user tracking

--- a/adminusertrack.html
+++ b/adminusertrack.html
@@ -4,8 +4,8 @@
         <td>
         <a
             target="childWindow"
-            href="/adminpagetable?profname={{prof.name}}&profdept={{prof.department}}"
-            >{{prof.name.title()}} ({{prof.department}})</a>
+            href="/adminusertable?username={{username}}"
+            >{{username}}</a>
         </td>
     </tr>
     {% endfor %}
