fixing file names

--- a/admintable.html
+++ b/admintable.html
@@ -48,7 +48,7 @@
     </div>
     {% endfor %}
     {% endif %}
-    <a href="/adminpage">Go back to all professors</a>
+    <a href="/adminlandingpage">Go back to all professors</a>
 </table>
 </div>
 
