--- a/header.html
+++ b/header.html
@@ -33,7 +33,7 @@
       <!-- <i class="fa fa-caret-down"></i> -->
     <div class="dropdown-content">
       {% if is_admin: %} 
-      <a target="childWindow" href="/adminpage">Admin Controls</a> 
+      <a target="childWindow" href="/adminlandingpage">Admin Controls</a> 
       {% endif %}
       <a href="/logoutcas" onclick="return confirm('Are you sure you want to Logout?')" id = "logoutB">Logout</a>
     </div>
