--- a/adminlanding.html
+++ b/adminlanding.html
@@ -1,3 +1,3 @@
-<a href="/adminlandingpage"><button>Search Reviews by Professor Name</button></a>
+<a href="/adminpage"><button>Search Reviews by Professor Name</button></a>
 <a href="/adminusertrack"><button>Search Reviews by Username</button></a>
 
