fixing filenames and adding headers and front end elements to new pages

--- a/adminusertable.html
+++ b/adminusertable.html
@@ -47,7 +47,7 @@
     </div>
     {% endfor %}
     {% endif %}
-    <a href="/adminusertrack">Go back to all users</a>
+    <a href="/adminuserpage">Go back to all users</a>
 </table>
 </div>
 
