--- a/adminSearchResults.html
+++ b/adminSearchResults.html
@@ -4,7 +4,7 @@
             <td>
             <a
                 target="childWindow"
-                href="/adminpagetable?profname={{prof.name}}&profdept={{prof.department}}"
+                href="/adminproftable?profname={{prof.name}}&profdept={{prof.department}}"
                 >{{prof.name.title()}} ({{prof.department}})</a>
             </td>
         </tr>
