--- a/adminlanding.html
+++ b/adminlanding.html
@@ -1,3 +1,27 @@
-<a href="/adminpage"><button>Search Reviews by Professor Name</button></a>
-<a href="/adminusertrack"><button>Search Reviews by Username</button></a>
+<title>Princeton Professors Admin</title>
+    <link rel="icon" href="https://www.cs.princeton.edu/favicon">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+
+    <style>
+      .header,
+      .footer {
+        background-color: #06839a;
+        color: white;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="container-fluid header">
+      <center>
+        <h1>Admin Control Panel</h1>
+      </center>
+    </div>
+<a href="/adminprofpage"><button>Search Reviews by Professor Name</button></a>
+<a href="/adminuserpage"><button>Search Reviews by Username</button></a>
 
