--- a/adminuserpage.html
+++ b/adminuserpage.html
@@ -1,13 +1,61 @@
 
-<table class="table table-striped" id="adminusertable">
-    {% for username in usernames %}
-    <tr>
-        <td>
-        <a
-            target="childWindow"
-            href="/adminusertable?username={{username}}"
-            >{{username}}</a>
-        </td>
-    </tr>
-    {% endfor %}
-</table>
+<html>
+  <head>
+    <title>Princeton Professors Admin</title>
+    <link rel="icon" href="https://www.cs.princeton.edu/favicon">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+
+    <style>
+      .header,
+      .footer {
+        background-color: #06839a;
+        color: white;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="container-fluid header">
+      <center>
+        <h1>Admin Control Panel</h1>
+      </center>
+      <div class="row">
+        <div class="search col-sm-3">
+          <input
+            type="text"
+            id="adminProfSearchInput"
+            placeholder="Search by professor name..."
+            autofocus
+          />
+        </div>
+      </div>
+      <br/>
+    </div>
+    {% if not is_admin: %} 
+        You cannot access this page. 
+    {% else %}
+    <table class="table table-striped" id="adminusertable">
+        {% for username in usernames %}
+        <tr>
+            <td>
+            <a
+                target="childWindow"
+                href="/adminusertable?username={{username}}"
+                >{{username}}</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+    {% endif %}
+
+    <div class="container-fluid footer">
+      <center>
+          Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla
+          Waitman
+      </center>
+    </div>
