--- a/adminuserpage.html
+++ b/adminuserpage.html
@@ -29,7 +29,7 @@
           <input
             type="text"
             id="adminProfSearchInput"
-            placeholder="Search by professor name..."
+            placeholder="Search by username..."
             autofocus
           />
         </div>
