implements searching on user page

--- a/adminprofpage.html
+++ b/adminprofpage.html
@@ -71,7 +71,7 @@
         let encodedAdminSearch = encodeURIComponent(adminSearch);
 
         let url =
-          "/adminSearchResults?prof=" +
+          "/adminProfResults?prof=" +
           encodedAdminSearch;
 
         if (request !== null) request.abort();
