--- a/adminuserpage.html
+++ b/adminuserpage.html
@@ -11,16 +11,27 @@
     />
 
     <style>
-      .header,
-      .footer {
-        background-color: #06839a;
-        color: white;
+      .adminheader,
+      .adminfooter {
+        background-color: white;
+        color: rgb(71, 135, 232);
       }
+
+      .adminbody {
+        background-color: rgb(71, 135, 232);
+        color: white
+      }
+
+      .search-container {
+      max-width: 400px;
+      margin: 20 auto;
+    }
     </style>
   </head>
 
   <body>
-    <div class="container-fluid header">
+    
+    <div class="container-fluid adminheader">
       <center>
         <h1>Admin Control Panel</h1>
       </center>
@@ -36,13 +47,15 @@
       </div>
       <br/>
     </div>
+    
+    <div class="adminbody"></div>
     {% if not is_admin: %} 
         You cannot access this page. 
     {% else %}
       <div id="searchResults"></div>
     {% endif %}
 
-    <div class="container-fluid footer">
+    <div class="container-fluid adminfooter">
       <center>
           Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla
           Waitman
@@ -99,6 +112,6 @@
 
       $("document").ready(setup);
     </script>
-
+</body>
 </body>
 </html>
