--- a/adminproftable.html
+++ b/adminproftable.html
@@ -10,7 +10,7 @@
 
 
         <style>
-            .header, .footer {background-color:#06839a; color:white}
+            .header, .footer {background-color:rgb(71, 135, 232); color:white}
         </style>
 
     </head>
