--- a/adminusertable.html
+++ b/adminusertable.html
@@ -1,8 +1,6 @@
 <style>
   .card-wrapper {
-      display: flex;
-      flex-wrap: wrap;
-      margin: -10px; 
+      padding: 2px 8px;
   }
 
   .card {
@@ -29,7 +27,7 @@
 
 
         <style>
-            .header, .footer {background-color:#06839a; color:white}
+            .header, .footer {background-color:rgb(71, 135, 232); color:white}
         </style>
 
     </head>
@@ -44,9 +42,9 @@
 <!-- <script src="path/to/db_utils.js"></script>
 <script src="path/to/main.js"></script> -->
 <div class="container-fluid">
-<a href="/adminuserpage">Go back</a>
-<h3>Displaying all reviews for {{username}}:</h3>
-<hr>
+<center>
+    <h3>Displaying all reviews for {{username}}:</h3>
+</center>
 
 <table class="table table-striped">
 
@@ -55,8 +53,13 @@
     <hr>
 
     {% else %}
-
+    <center>
     <button onclick="blockUserAndDeleteAllUserReviews('{{ username }}')">Delete All Reviews and Block this user</button>
+    <br>
+    <br>
+    <br>
+    <a href="/adminuserpage">Go back to all users</a>
+    </center>
     <div class="card-wrapper"></div>
 
     {% for review in reviews %}
@@ -70,19 +73,11 @@
       <p>Courses taken with {{professor.name}}: {{review.courses}}</p>
       <!-- *** WE NEED TO ADD A FUNCTION IN UTILS TO BE ABLE TO DELETE AN INDIVIDUAL REVIEW! -->
       <button onclick="deleteReview('{{review.reviewId}}', '{{professor.name}}', '{{professor.department}}')">Delete</button>
-      <hr>
     </div>
     {% endfor %}
   </div>
     {% endif %}
-    <a href="/adminuserpage">Go back to all users</a>
 </table>
-</div>
-
-<div class="container-fluid footer">
-    <center>
-        <p>Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla Waitman</p>
-    </center>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
