--- a/adminusertable.html
+++ b/adminusertable.html
@@ -27,7 +27,7 @@
 
 
         <style>
-            .header, .footer {background-color:rgb(71, 135, 232); color:white}
+            .header, .footer {background-color:white; color:rgb(71, 135, 232)}
         </style>
 
     </head>
