--- a/adminproftable.html
+++ b/adminproftable.html
@@ -1,3 +1,19 @@
+<style>
+  .card-wrapper {
+      padding: 2px 8px;
+  }
+
+  .card {
+      flex: 1 1 calc(33.33% - 20px); /* Adjust the width of each card as needed */
+      margin: 10px; /* Adjust the margin to add space between cards */
+      padding: 20px;
+      border: 1px solid #ddd; /* Add a border for separation */
+      border-radius: 5px; /* Optional: Add rounded corners */
+      background-color: #cdeccd; /* Set the background color */
+  }
+</style>
+
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,7 +26,7 @@
 
 
         <style>
-            .header, .footer {background-color:rgb(71, 135, 232); color:white}
+            .header, .footer {background-color:white; color:rgb(71, 135, 232)}
         </style>
 
     </head>
@@ -25,7 +41,9 @@
 <!-- <script src="path/to/db_utils.js"></script>
 <script src="path/to/main.js"></script> -->
 <div class="container-fluid">
+  <center>
 <h3>Displaying all reviews for {{profname}}:</h3>
+</center>
 
 <table class="table table-striped">
 
@@ -34,9 +52,14 @@
     <hr>
 
     {% else %}
+    <center>
+      <a href="/adminlandingpage">Go back to all professors</a>
+    </center>
+
+    <div class="card-wrapper"></div>
 
     {% for review in reviews %}
-    <div class="w3-container">
+    <div class="card">
       <!-- make for loop for all reviews  -->
       <p>Overall Rating: {{review.rating}} </p> <!-- gonna have to add this  -->
       <p>Content: {{review.content}} / 5.0 | Delivery {{review.delivery}} / 5.0 | Availability {{review.availability}} / 5.0 | Organization {{review.organization}} / 5.0</p>
@@ -44,18 +67,12 @@
       <p>Courses taken with {{profname}}: {{review.courses}}</p>
       <!-- *** WE NEED TO ADD A FUNCTION IN UTILS TO BE ABLE TO DELETE AN INDIVIDUAL REVIEW! -->
       <button onclick="deleteReview('{{review.reviewId}}', '{{profname}}', '{{profdept}}')">Delete</button>
+
       <hr>
     </div>
     {% endfor %}
     {% endif %}
-    <a href="/adminlandingpage">Go back to all professors</a>
 </table>
-</div>
-
-<div class="container-fluid footer">
-    <center>
-        <p>Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla Waitman</p>
-    </center>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
