changes color scheme

--- a/detailtable.html
+++ b/detailtable.html
@@ -26,7 +26,7 @@
     <div class="w3-container w3-white w3-margin-bottom">
       <h2 class="w3-text-grey w3-padding-16">
         <i
-          class="fa fa-user w3-margin-right w3-text-blue"
+          class="fa fa-user w3-margin-right"
           style="font-size: 36px"
         ></i
         >{{prof.name.title()}}
@@ -38,7 +38,7 @@
     <div class="w3-container w3-white w3-margin-bottom">
       <h2 class="w3-text-grey w3-padding-16">
         <i
-          class="fa fa-comments fa-fw w3-margin-right w3-xxlarge w3-text-blue"
+          class="fa fa-comments fa-fw w3-margin-right w3-xxlarge"
         ></i
         >Student Feedback:
       </h2>
