Eden+Yoni: create banned users page and unban button, Eden helped with prev commit too

--- a/adminuserpage.html
+++ b/adminuserpage.html
@@ -45,6 +45,7 @@
         </div>
 
         <a href="/adminlandingpage">Go Back</a>
+        <a href="/bannedusers">Banned Users</a>
         <br>
         <br>
 
